test(appointment): refatora teste de cache para usar dados reais no banco
- Adiciona configuração e persistência de DoctorReadModel e Appointment no banco em memória antes da execução do teste.
- Remove bloco try/catch que ignorava exceção de agendamento não encontrado.
- Adiciona método @BeforeEach para garantir a limpeza do banco de dados e do cache do Redis antes de cada execução, evitando poluição entre testes.